<resources>
    <string name="app_name">Github Repositories</string>
    <string name="repository_name">Repository:</string>
    <string name="description">Description:</string>
    <string name="author">Author:</string>
    <string name="repository_photo">Author Photo</string>
    <string name="stars">Stars:</string>
    <string name="forks">Forks:</string>
    <string name="more_about_it">More about it</string>
    <string name="back_about_it">Return</string>
</resources>