...
                <TextView
                    android:id="@+id/repository_content"
                    style="@style/text_normal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin"
                    card_view:layout_constraintBottom_toTopOf="@+id/description_btn"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toEndOf="@+id/repository"
                    card_view:layout_constraintTop_toBottomOf="@+id/author_content"
                    tools:text="Android" />

                <Button
...
